@@ -1,26 +1,0 @@
-/* Returns non-zero if the _Decimal32 is finite
-   Copyright (C) 2008 IBM Corporation.
-
-   Author(s): Pete Eberlein <eberlein@us.ibm.com>
-
-   The Decimal Floating Point C Library is free software; you can
-   redistribute it and/or modify it under the terms of the GNU Lesser
-   General Public License version 2.1.
-
-   The Decimal Floating Point C Library is distributed in the hope that
-   it will be useful, but WITHOUT ANY WARRANTY; without even the implied
-   warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See
-   the GNU Lesser General Public License version 2.1 for more details.
-
-   You should have received a copy of the GNU Lesser General Public
-   License version 2.1 along with the Decimal Floating Point C Library;
-   if not, write to the Free Software Foundation, Inc., 59 Temple Place,
-   Suite 330, Boston, MA 02111-1307 USA.
-
-   Please see libdfp/COPYING.txt for more information.  */
-
-#define _DECIMAL_SIZE 32
-#define FUNCTION_NAME isfinite
-#define TEST_CLASS_MASK 0x38
-
-#include "is_template.h"
